syntax = "proto3";

package techschool.pcbook;
//package proto;

option go_package = ".;pb";
option java_package = "com.gitlab.techschool.pcbook.pb";
option java_multiple_files = true;

import "laptop_message.proto";
import "filter_message.proto";

//Unary API
message CreateLaptopRequest {
  Laptop laptop = 1;
}

//Unary API
message CreateLaptopResponse {
  string id = 1;
}

//Server Steam API
message SearchLaptopRequest {
  Filter filter = 1;
}

//Server Stream API
message SearchLaptopResponse {
  Laptop laptop = 1;
}

message UploadImageRequest {
  oneof data {
    ImageInfo info = 1;
    bytes chunk_data = 2;
  };
}

message ImageInfo {
  string laptop_id = 1;
  string image_type = 2;
}

message UploadImageResponse {
  string id = 1;
  uint32 size = 2;
}

message RateLaptopRequest {
  string laptop_id = 1;
  double score = 2;
}

message RateLaptopResponse {
  string laptop_id = 1;
  uint32 rated_count = 2;
  double average_score = 3;
}

service LaptopService {
  //Unary gRPC API
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
  //Server Stream gRPC API
  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {};
  //Client Stream gRPC API
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {};
  // Bidirectional Stream gRPC API
  rpc RateLaptop(stream RateLaptopRequest) returns (stream RateLaptopResponse) {};
}